; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_gifdec.c_gif_copy_img_rect.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_gifdec.c_gif_copy_img_rect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i32, i32, i32)* @gif_copy_img_rect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gif_copy_img_rect(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %21 = load i32, i32* %12, align 4
  %22 = load i32, i32* %10, align 4
  %23 = mul nsw i32 %21, %22
  store i32 %23, i32* %15, align 4
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* %15, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  store i32* %27, i32** %17, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = load i32, i32* %15, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  store i32* %31, i32** %18, align 8
  %32 = load i32*, i32** %17, align 8
  %33 = load i32, i32* %14, align 4
  %34 = load i32, i32* %10, align 4
  %35 = mul nsw i32 %33, %34
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %32, i64 %36
  store i32* %37, i32** %19, align 8
  br label %38

38:                                               ; preds = %58, %7
  %39 = load i32*, i32** %17, align 8
  %40 = load i32*, i32** %19, align 8
  %41 = icmp ult i32* %39, %40
  br i1 %41, label %42, label %67

42:                                               ; preds = %38
  %43 = load i32*, i32** %17, align 8
  %44 = load i32, i32* %11, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  store i32* %46, i32** %16, align 8
  %47 = load i32*, i32** %18, align 8
  %48 = load i32, i32* %11, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %47, i64 %49
  store i32* %50, i32** %20, align 8
  %51 = load i32*, i32** %20, align 8
  %52 = load i32*, i32** %16, align 8
  %53 = load i32, i32* %13, align 4
  %54 = sext i32 %53 to i64
  %55 = mul i64 %54, 4
  %56 = trunc i64 %55 to i32
  %57 = call i32 @memcpy(i32* %51, i32* %52, i32 %56)
  br label %58

58:                                               ; preds = %42
  %59 = load i32, i32* %10, align 4
  %60 = load i32*, i32** %17, align 8
  %61 = sext i32 %59 to i64
  %62 = getelementptr inbounds i32, i32* %60, i64 %61
  store i32* %62, i32** %17, align 8
  %63 = load i32, i32* %10, align 4
  %64 = load i32*, i32** %18, align 8
  %65 = sext i32 %63 to i64
  %66 = getelementptr inbounds i32, i32* %64, i64 %65
  store i32* %66, i32** %18, align 8
  br label %38

67:                                               ; preds = %38
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
